--- a/fresh_tomatoes.html
+++ b/fresh_tomatoes.html
@@ -1,6 +1,6 @@
 
 <head>
-    <meta charset="utf-8">
+    <meta charset="big-5">
     <title>Fresh Tomatoes!</title>
 
     <!-- Bootstrap 3 -->
@@ -104,14 +104,28 @@
     </div>
     <div class="container">
       
-<div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="vwyZH85NQC4" data-toggle="modal" data-target="#trailer">
+<div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="TYNCL2vtEbk" data-toggle="modal" data-target="#trailer">
     <img src="https://upload.wikimedia.org/wikipedia/en/1/13/Toy_Story.jpg" width="220" height="342">
-    <h2>Toy Story</h2>
+    <h2>Toy Story[普遍級]</h2>
+    <h2></h2>
+    <h2>1小時60分鐘</h2>
+    <font size="2" color="blue" align="left">玩具的友誼與冒險故事</font>
 </div>
 
 <div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="-9ceBgWV8io" data-toggle="modal" data-target="#trailer">
     <img src="https://upload.wikimedia.org/wikipedia/id/b/b0/Avatar-Teaser-Poster.jpg" width="220" height="342">
-    <h2>Avatar</h2>
+    <h2>Avatar[輔導級]</h2>
+    <h2></h2>
+    <h2>2小時20分鐘</h2>
+    <font size="2" color="blue" align="left">人類侵入外星球大搞破壞，外星人反撲的故事</font>
+</div>
+
+<div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="vkznPsngX0M" data-toggle="modal" data-target="#trailer">
+    <img src="https://img.zi.org.tw/ddm/2017/09/1506663337-8bccb67b5773b35b8bb7e15e93b8e925.jpg" width="220" height="342">
+    <h2>Stranger Things[科幻恐怖]</h2>
+    <h2>第一季 第一集</h2>
+    <h2>每集45分鐘</h2>
+    <font size="2" color="blue" align="left">講述一名年輕男孩忽然失蹤後，一位擁有超能力的年輕女孩幫男孩的朋友尋找男孩的下落，而男孩的哥哥與小鎮警署的警長也各自展開他們的調查。</font>
 </div>
 
     </div>
